--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "Siti": {
            "StreamingCommunity": {
-               "url": "https://streamingcommunity.paris",
+               "url": "https://streamingcommunity.cam",
                "SC_ForwardProxy": "0",
                "SC_PROXY": "0",
                "VX_ForwardProxy": "0",
@@ -13,7 +13,7 @@
                "enabled": "1"
            },
            "Tantifilm":{
-               "url": "https://www.tanti.bond",
+               "url": "https://www.tantifilm.food",
                "TF_ForwardProxy": "0",
                "TF_PROXY": "0",
                "enabled": "1"
@@ -30,7 +30,7 @@
               "enabled":"1"
           },
           "CB01":{
-              "url":"https://cb01new.loan",
+              "url":"https://cb01net.live",
               "CB_PROXY":"0",
               "CB_ForwardProxy":"0",
               "MX_ForwardProxy":"0",
@@ -40,21 +40,21 @@
           "DDLStream":{
               "url":"https://ddlstreamitaly.co",
               "cookies" : {
-                  "ips4_device_key": null,
-                  "ips4_IPSSessionFront": null,
-                  "ips4_member_id": null,
-                  "ips4_login_key": null
-                  },
+                "ips4_device_key": "e76de2d09214c678fa18e317e1aab74b",
+                "ips4_IPSSessionFront": "a43ab7f014e10d61c58412c436b2018b",
+                "ips4_member_id": "4030150",
+                "ips4_login_key": "5cb83aeddd61ee9dc9d8727726cabc94"
+            },
               "enabled":"1"
           },
           "Guardaserie":{
-              "url":"https://guardaserietv.mom",
+              "url":"https://guardaserietv.lat",
               "enabled":"1",
               "GS_ForwardProxy":"0",
               "GS_PROXY":"0"
           },
           "GuardaHD":{
-              "url":"https://mostraguarda.stream",
+              "url":"https://guardahd.stream",
               "enabled":"1",
               "GH_ForwardProxy":"0",
               "GH_PROXY":"0"
@@ -84,7 +84,7 @@
        "load_env": "0",
        "HOST": "0.0.0.0",
        "PORT": "8080",
-       "Name": "MammaMia",
+       "Name": "MammaMiaeTuaUHD",
        "Icon": "🍕️",
        "Public_Instance": "0",
        "Remote_Instance": "1",
