--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "Siti": {
            "StreamingCommunity": {
-               "url": "https://streamingcommunity.cam",
+               "url": "https://streaming-community.luxe",
                "SC_ForwardProxy": "0",
                "SC_PROXY": "0",
                "VX_ForwardProxy": "0",
@@ -37,16 +37,16 @@
               "MX_PROXY":"0",
               "enabled":"1"
           },
-          "DDLStream":{
-              "url":"https://ddlstreamitaly.co",
-              "cookies" : {
+          "DDLStream": {
+            "url": "https://ddlstreamitaly.co",
+            "cookies": {
                 "ips4_device_key": "e76de2d09214c678fa18e317e1aab74b",
                 "ips4_IPSSessionFront": "a43ab7f014e10d61c58412c436b2018b",
                 "ips4_member_id": "4030150",
                 "ips4_login_key": "5cb83aeddd61ee9dc9d8727726cabc94"
             },
-              "enabled":"1"
-          },
+            "enabled": "1"
+        },
           "Guardaserie":{
               "url":"https://guardaserietv.lat",
               "enabled":"1",
