--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "Siti": {
            "StreamingCommunity": {
-               "url": "https://streaming-community.luxe",
+               "url": "http://streamingunity.cam",
                "SC_ForwardProxy": "0",
                "SC_PROXY": "0",
                "VX_ForwardProxy": "0",
