--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
               "enabled":"1"
           },
           "Guardaserie":{
-              "url": "https://guardaserietv.run",
+              "url": "https://guardaserietv.shop",
               "enabled":"1",
               "GS_ForwardProxy":"0",
               "GS_PROXY":"0"
