--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
               "enabled":"1"
           },
           "Guardaserie":{
-              "url": "https://guardaserietv.xyz",
+              "url": "https://guardaserietv.wiki",
               "enabled":"1",
               "GS_ForwardProxy":"0",
               "GS_PROXY":"0"
@@ -47,7 +47,7 @@
             "GF_PROXY": "0"
           },
           "Guardoserie":{
-            "url": "https://guardoserie.lol",
+            "url": "https://guardoserie.wtf",
             "enabled": "1",
             "GO_ForwardProxy": "0",
             "GO_PROXY": "0"
