--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
             "ES_PROXY": "0"
           },  
           "Guardaflix":{
-            "url": "https://guardaflix.live",
+            "url": "https://guardaflix.wtf",
             "enabled": "1",
             "GF_ForwardProxy": "0",
             "GF_PROXY": "0"
