--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
               "GH_PROXY":"0"
           },
           "Eurostreaming":{
-            "url": "https://eurostreamings.vip",
+            "url": "https://eurostreamings.site",
             "enabled": "1",
             "ES_ForwardProxy": "0",
             "ES_PROXY": "0"
