--- a/config.json
+++ b/config.json
@@ -47,7 +47,7 @@
             "GF_PROXY": "0"
           },
           "Guardoserie":{
-            "url": "https://guardoserie.wtf",
+            "url": "https://guardoserie.buzz",
             "enabled": "1",
             "GO_ForwardProxy": "0",
             "GO_PROXY": "0"
